update admin feature